# terraform-demo

./: .env.example  .gitignore  .infracost.yml  .pre-commit-config.yaml  .tflint.hcl  .trivyignore  Dockerfile  README.md  Taskfile.gitflow.yml  Taskfile.yml  checkov.yml  devbox.json  docker-compose.mkdocs.yml  mkdocs.yml  progress.txt  pyproject.toml  versions.json  versions.tf
.github/: 0-README.md  FUNDING.yml
.github/workflows/: gitflow-protect.yaml
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/disclaimer/: index.html
0.1.0/search/: search_index.json
0.1.1/: 404.html  index.html  sitemap.xml
0.1.1/disclaimer/: index.html
0.1.1/search/: search_index.json
0.1.2/: 404.html  index.html  sitemap.xml
0.1.2/disclaimer/: index.html
0.1.2/search/: search_index.json
0.1.3/: 404.html  index.html  sitemap.xml
0.1.3/disclaimer/: index.html
0.1.3/search/: search_index.json
0.1.4/: 404.html  index.html  sitemap.xml
0.1.4/disclaimer/: index.html
0.1.4/search/: search_index.json
0.1.5/: 404.html  index.html  sitemap.xml
0.1.5/disclaimer/: index.html
0.1.6/: 404.html  index.html  sitemap.xml
0.1.6/disclaimer/: index.html
0.1.6/search/: search_index.json
branch-rules/: Main Branch Protection.json  Release and Hotfix Branch Protection.json
docs/: disclaimer.md  index.md
docs/0-quickstart/: 0-prerequisites.md  1-getting-started.md
docs/1-architecture/: 0-overview.md
docs/2-project/: notes.md  setup.md  terraform.md  uv-notes.md
docs/3-troubleshooting/: 0-overview.md  2-problem2.md
latest/: 404.html  index.html
(+150 files in other folders)
