[project]
name = "docs"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "requests>=2.32.4,<3.0.0",
    "rich>=14.0.0,<15.0.0",
    "mkdocs>=1.6.1,<2.0.0",
    "mkdocs-material>=9.6.15,<10.0.0",
    "mkdocstrings[python]>=0.29.1,<0.30.0",
    "pymdown-extensions>=10.16,<11.0",
    "mkdocs-mermaid2-plugin>=1.2.1,<2.0.0",
    "mike>=2.1.3,<3.0.0",
    "mkdocs-minify-plugin>=0.8.0,<0.9.0"
]

[dependency-groups]
dev = [
    "black>=25.1.0,<26.0.0",
    "pytest>=8.4.1,<9.0.0"
]

[tool.uv]
package = false

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
